--- a/contact.html
+++ b/contact.html
@@ -46,11 +46,39 @@
               <label for="exampleFormControlInput1">Email address</label>
               <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
             </div>
-            
             <div class="form-group">
-              <label for="exampleFormControlTextarea1">Example textarea</label>
+              <label for="exampleFormControlSelect1">Productos</label>
+              <select class="form-control" id="exampleFormControlSelect1">
+                <option>Cuadernos</option>
+                <option>Lápices</option>
+                <option>Post-it</option>
+                <option>Wachistape</option>
+                <option>Estuches</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlSelect2">Cantidad</label>
+              <select multiple class="form-control" id="exampleFormControlSelect2">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1">Mensaje</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
+            <div class="form-group">
+                <label for="">
+                    Género
+                </label>
+                <input type="radio" name="genero"> Femenino
+                <input type="radio" name="genero"> Masculino
+                <input type="radio" name="genero"> No Informa
+            </div>
+
           </form>
     </div>
     <footer class="mt-5 p-5 bg-info text-light">
