--- a/contact.html
+++ b/contact.html
@@ -44,11 +44,11 @@
         <form>
             <div class="form-group">
               <label for="exampleFormControlInput1">Email address</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+              <input type="email" class="form-control" id="correo" placeholder="name@example.com">
             </div>
             <div class="form-group">
               <label for="exampleFormControlSelect1">Productos</label>
-              <select class="form-control" id="exampleFormControlSelect1">
+              <select class="form-control" id="producto">
                 <option>Cuadernos</option>
                 <option>Lápices</option>
                 <option>Post-it</option>
@@ -58,7 +58,7 @@
             </div>
             <div class="form-group">
               <label for="exampleFormControlSelect2">Cantidad</label>
-              <select multiple class="form-control" id="exampleFormControlSelect2">
+              <select multiple class="form-control" id="cantidad">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
@@ -68,18 +68,19 @@
             </div>
             <div class="form-group">
               <label for="exampleFormControlTextarea1">Mensaje</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              <textarea class="form-control" id="mensaje" rows="3"></textarea>
             </div>
             <div class="form-group">
                 <label for="">
                     Género
                 </label>
-                <input type="radio" name="genero"> Femenino
-                <input type="radio" name="genero"> Masculino
-                <input type="radio" name="genero"> No Informa
+                <input type="radio" value="femenino" name="genero"> Femenino
+                <input type="radio" value="masculino" name="genero"> Masculino
+                <input type="radio" value="no informa" name="genero"> No Informa
             </div>
-
+            <input type="submit" value="Enviar">
           </form>
+
     </div>
     <footer class="mt-5 p-5 bg-info text-light">
         <div class="row">
@@ -93,6 +94,14 @@
 
 
     </footer>
+ 
     
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
+   <script src="estructura.js"></script>
 </body>
 </html>
